# c-exercises

./: CMakeLists.txt  magic_square.c  memmanager.c  memmanager.h  memuser.c  merge_pointers_a.c  merge_pointers_b.c  prime.c
